# alphaswarm

./: LICENSE  README.md  environment.yml  pyproject.toml  tox.ini
data/HTE_datasets/: README.md  pd_sulfonamide_SURF.csv  pd_suzuki_SURF.csv
data/benchmark/: README.md
data/benchmark/experimental_data/: buchwald_train_data.csv  ni_suzuki_train_data.csv  sulfonamide_train_data.csv
data/experimental_campaigns/pso_suzuki/configs/: bo_suzuki_iter_2.toml  bo_suzuki_iter_3.toml  pso_suzuki_iter_1.toml  pso_suzuki_iter_2.toml  pso_suzuki_iter_3.toml
data/experimental_campaigns/pso_suzuki/pso_plate_suggestions/: BO_suzuki_plate_1_suggestions.csv  BO_suzuki_plate_2_suggestions.csv  BO_suzuki_plate_3_suggestions.csv  PSO_suzuki_plate_1_suggestions_formated.csv  PSO_suzuki_plate_2_suggestions.csv  PSO_suzuki_plate_3_suggestions.csv
data/experimental_campaigns/pso_suzuki/pso_training_data/: BO_suzuki_plate_2_train.csv  PSO_suzuki_plate_1_train.csv  PSO_suzuki_plate_2_train.csv
src/alphaswarm/: __init__.py  cli.py  configs.py  metrics.py  objective_functions.py  pso.py  swarms.py
src/alphaswarm/acqf/: acqf.py  acqfunc.py
src/alphaswarm/models/: gp.py
src/alphaswarm/utils/: logger.py  moo_utils.py  tensor_types.py  utils.py
tests/: test_objective_functions.py  test_swarms.py
tests/utils/: test_moo_utils.py  test_utils.py
