[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaswarm"
readme = "README.md"
requires-python = ">=3.12.3"
license = {file = "LICENSE"}
description = "ML-guided Particle Swarm Optimisation for Reaction Conditions"
dependencies = [
    "torch",
    "botorch",
    "gpytorch",
    "pandas",
    "numpy",
    "jaxtyping",
    "beartype",
    "click",
    "rich",
    "pytorch_lightning",
    "environs",
    "typer",
]
authors = [
    {name = "Rémi Schlama", email = "remi.schlama@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/rschlm/alphaswarm"
tracker = "https://github.com/rschlm/alphaswarm/issues"

[project.optional-dependencies]
test = [
    "beartype",
    "mypy",
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]

[project.scripts]
alphaswarm = "alphaswarm.cli:main"

[tool.hatch.version]
path = "src/alphaswarm/__about__.py"

[tool.ruff]
show-fixes = true
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "D",  # Pydocstyle
    "UP",  # pyupgrade
    "I",  # isort
    "PL",  # Pylint
]
typing-modules = ["beartype.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "PLR2004"]
"src/**.py" = ["F821", "F722", "UP037", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_configs = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

# More strict checks for library code
[[tool.mypy.overrides]]
module = "alphaswarm"
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

# Ignore certain missing imports
# [[tool.mypy.overrides]]
# module = "thirdparty.*"
# ignore_missing_imports = true

# [tool.pyright]
# include = ["alphaswarm"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__about__.py',
    'cli.py',
    '__init__.py',
]


[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
